# doc_assistant_project

./: .gitignore  main.py  pyproject.toml  requirements.txt  writeup.md
logs/: tool_usage_20260615_194110.json  tool_usage_20260615_194345.json  tool_usage_20260615_194448.json
sessions/: 5facbba2-e7bf-4a29-bcc7-abaedf631b10.json  aa30619f-b681-41c4-b2ec-12546f11d527.json  d2402bbe-714f-4774-8696-d5bb331c8247.json
src/: agent.py  assistant.py  prompts.py  schemas.py  tools.py
tests/: test_agent.py  test_integration.py  test_tools.py
