[project]
name = "doc-assistant-project"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-openai>=0.1.0",
    "langgraph>=0.6.7",
    "openai>=1.0.0",
    "print-color>=0.4.6",
    "pydantic>=2.0.0",
    "pytest>=9.1.0",
    "python-dotenv>=1.0.0",
]
